# video-to-markdown

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
src/: lib.rs  lib.ts  main.rs  video-ocr-diff.ts
tests/: lib.test.ts
